--- a/hw12/src/main/resources/templates/allBooks.html
+++ b/hw12/src/main/resources/templates/allBooks.html
@@ -14,7 +14,7 @@
                     <th th:text="#{book-field-title}">Title</th>
                     <th th:text="#{book-field-author}">Author</th>
                     <th th:text="#{book-field-genre}">Genre</th>
-                    <th th:text="#{comment-field-header}" th:attr="colspan=${role == 'ADMIN'} ? 1 : 2">Comments</th>
+                    <th th:text="#{comment-field-header}" colspan="2">Comments</th>
                     <th th:text="#{table-column-action}" th:if="${role == 'ADMIN'}">Action</th>
                 </tr>
             </thead>
@@ -27,7 +27,7 @@
                     <td>
                         <a href="allCommentsByBook.html" th:href="@{/comment(bookId=*{id})}" th:text="#{comment-button-caption}">Get comments</a>
                     </td>
-                    <td th:if="${role == 'USER'}">
+                    <td>
                         <a href="addComment.html" th:href="@{/comment/new(bookId=*{id})}" th:text="#{add-button-caption}">Add</a>
                     </td>
                     <td th:if="${role == 'ADMIN'}">
