--- a/hw18/src/main/resources/templates/addComment.html
+++ b/hw18/src/main/resources/templates/addComment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title th:text="#{add-page}">Add comment</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
+    <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
 <body>
 <form id="add-form" action="addComment.html" th:action="@{/comment/new(bookId=${bookId})}" th:method="post" th:object="${comment}">
@@ -11,10 +12,9 @@
     <div class="row">
         <label for="comment-description-input" th:text="#{comment-field-description} + ':'">Description:</label>
         <input id="comment-description-input" name="description" type="text" value="New comment"/>
-        <div class="errors" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Wrong description</div>
     </div>
     <div class="row">
-        <button type="submit" th:text="#{save-button-caption}">Save</button>
+        <button type="button" th:attr="onclick='addComment(\'' + ${bookId} +'\')'" th:text="#{save-button-caption}">Save</button>
         <a href="singleBook.html" th:href="@{/book/__${bookId}__}">
             <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
         </a>
