--- a/hw18/src/main/resources/templates/allCommentsByBook.html
+++ b/hw18/src/main/resources/templates/allCommentsByBook.html
@@ -4,24 +4,21 @@
     <meta charset="UTF-8"/>
     <title th:text="#{all-comments-page}">List of all comments on the book</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
+    <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
-<body>
-    <h3 th:text="#{comment-table-header(${book.title})}">All comments on the book</h3>
+<body th:attr="onload='showAllCommentsByBook(\'' + ${bookId} + '\')'">
+    <h3 th:text="#{comment-table-header(${bookId})}">All comments on the book</h3>
     <table class="element">
         <thead>
             <tr>
                 <th th:text="#{comment-field-id}">ID</th>
                 <th th:text="#{comment-field-description}">Description</th>
-                <th th:text="#{table-column-action}">Action</th>
             </tr>
         </thead>
-        <tbody>
-            <tr th:each="comment : ${comments}" th:object="${comment}">
-                <td th:text="*{id}">1</td>
-                <td th:text="*{description}">Relevant</td>
-                <td>
-                    <a href="singleComment.html" th:href="@{/comment/__*{id}__}" th:text="#{edit-button-caption}">Edit</a>
-                </td>
+        <tbody id="comment-table">
+            <tr>
+                <td>1</td>
+                <td>Relevant</td>
             </tr>
         </tbody>
     </table>
