--- a/hw18/src/main/resources/templates/deleteBook.html
+++ b/hw18/src/main/resources/templates/deleteBook.html
@@ -10,8 +10,8 @@
     <form id="delete-form" action="deleteBook.html" th:action="@{/api/v1/book/{id}(id=${id})}" th:method="delete">
         <h3 th:text="#{confirm-header}">Are you sure?</h3>
         <div class="row">
-            <button type="button" th:attr="onclick='deleteBook(' + ${id} +')'" th:text="#{confirm-button-caption}">Confirm</button>
-            <a href="singleBook.html" th:href="@{/book/__*{id}__}">
+            <button type="button" th:attr="onclick='deleteBook(\'' + ${id} +'\')'" th:text="#{confirm-button-caption}">Confirm</button>
+            <a href="singleBook.html" th:href="@{/book/__${id}__}">
                 <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
             </a>
         </div>
