--- a/hw18/src/main/resources/templates/singleBook.html
+++ b/hw18/src/main/resources/templates/singleBook.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
     <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
-<body th:attr="onload='showBook(\'' + ${id} +'\')'">
+<body th:attr="onload='showBook(\'' + ${id} + '\')'">
 <form id="edit-form" action="singleBook.html" th:action="@{/api/v1/book/__${id}__}" th:method="put">
     <h3 th:text = "#{book-form-header}">Book Info:</h3>
     <div class="row">
@@ -26,10 +26,10 @@
         <select id="genreId-select" name="genreId"></select>
     </div>
     <div class="row">
-        <a href="allCommentsByBook.html" th:href="@{/comment(bookId=*{id})}" th:text="#{comment-get-button-caption}">Get comments</a>
+        <a href="allCommentsByBook.html" th:href="@{/comment(bookId=${id})}" th:text="#{comment-get-button-caption}">Get comments</a>
     </div>
     <div class="row">
-        <a href="addComment.html" th:href="@{/comment/new(bookId=*{id})}" th:text="#{comment-add-button-caption}">Add comment</a>
+        <a href="addComment.html" th:href="@{/comment/new(bookId=${id})}" th:text="#{comment-add-button-caption}">Add comment</a>
     </div>
     <div class="row">
         <a href="deleteBook.html" th:href="@{/book/{id}/del(id=${id})}">
