--- a/hw18/src/main/resources/templates/singleComment.html
+++ b/hw18/src/main/resources/templates/singleComment.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8"/>
     <title th:text="#{edit-page}">Edit comment</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
+    <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
-<body th:object="${comment}">
-<form id="edit-form" action="singleComment.html" th:action="@{/comment/__*{id}__}" th:method="post" th:object="${comment}">
+<body th:attr="onload='showComment(\'' + ${id} +'\')'">
+<form id="edit-form" action="singleComment.html" th:action="@{/api/v1/comment/__${id}__}" th:method="post" th:object="${comment}">
     <h3 th:text = "#{comment-update-form-header}">Comment Info:</h3>
     <div class="row">
         <label for="id-input" th:text="#{comment-field-id} + ':'">ID:</label>
-        <input id="id-input" type="text" readonly="readonly" name="id" th:value="*{id}" value="1"/>
+        <input id="id-input" type="text" readonly="readonly" name="id" th:value="${id}" value="1"/>
     </div>
     <div class="row">
         <label for="comment-description-input" th:text="#{comment-field-description} + ':'">Description:</label>
-        <input id="comment-description-input" name="description" type="text" th:value="*{description}" value="Updated comment"/>
-        <div class="errors" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Wrong description</div>
+        <input id="comment-description-input" name="description" type="text" th:value="${description}" value="Updated comment"/>
     </div>
     <div class="row">
-        <a href="deleteComment.html" th:href="@{/comment/{id}/del(id=*{id})}">
+        <a href="deleteComment.html" th:href="@{/comment/{id}/del(id=${id})}">
             <button type="button" th:text="#{delete-button-caption}">Delete</button>
         </a>
     </div>
     <div class="row">
-        <button type="submit" th:text="#{save-button-caption}">Save</button>
-        <a href="allCommentsByBook.html" th:href="@{/comment(bookId=${bookId})}">
+        <button type="button" onclick="updateComment()" th:text="#{save-button-caption}">Save</button>
+        <a href="allBooks.html" th:href="@{/book/}">
             <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
         </a>
     </div>
